# apfp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SHEWCHUK.md  flake.nix
.github/workflows/: nix-flake-check.yml
apfp_signum_macro/: Cargo.toml
apfp_signum_macro/src/: lib.rs
benches/: cmp_dist_bench.rs  incircle_bench.rs  orient2d_bench.rs  orient2d_int_bench.rs  orient2d_vec_bench.rs
docs/: geometry_predicates_orient2d.md  orient2d_ast_exact_optimization.md  performance-analysis.md
nix/: asm-check-table.sh  check-no-allocations.sh  check-no-assertions.sh
src/: ap64.rs  expansion.rs  lib.rs
src/analysis/: adaptive_signum.rs  ast.rs  ast_static.rs  integer_signum.rs  mod.rs
src/ap64/: base.rs  mod.rs  ops.rs  range.rs
src/ap64_fixed/: base.rs  mod.rs  ops.rs
src/geometry/: coord.rs  f64.rs  i16.rs  i32.rs  i64.rs  i8.rs  mod.rs  predicates.rs
tests/: ap64_tests.rs  geometry_tests.rs
