[package]
name = "apfp"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]

[dev-dependencies]
quickcheck = "1"
ntest = "0.9"
robust = "1.2.0"
criterion = "0.7.0"
geometry-predicates = "0.3"

[[bench]]
name = "orient2d_bench"
harness = false

[[bench]]
name = "cmp_dist_bench"
harness = false
