[package]
name = "apfp"
version = "0.1.0"
edition = "2024"
description = "Adaptive precision floating-point arithmetic for robust geometric predicates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lemmih/apfp"
keywords = [
  "geometry",
  "predicates",
  "floating-point",
  "robust",
  "computational-geometry",
]
categories = ["mathematics", "science", "algorithms"]
readme = "README.md"

[features]
default = []

[dependencies]

[dev-dependencies]
quickcheck = "1"
ntest = "0.9"
robust = "1.2.0"
criterion = "0.7.0"
geometry-predicates = "0.3"
num-rational = "0.4"
num-traits = "0.2"
num-bigint = "0.4"

[[bench]]
name = "orient2d_bench"
harness = false

[[bench]]
name = "cmp_dist_bench"
harness = false

[[bench]]
name = "orient2d_vec_bench"
harness = false

[[bench]]
name = "orient2d_int_bench"
harness = false
